	- Add full attribute search context and allocation/init/deallocation
	  functions (see attrib.c).
	- Remove find_first_attr(). Just use ntfs_attr_get_search_ctx() +
	  ntfs_attr_find() which has the same effect.
	- Rewrite disk_io.[ch] and mft.[ch] defining new access API:
		disk_io.[ch] provide:	ntfs_p{read,write}(),
					ntfs_mst_p{read,write}(), and
					ntfs_clusters_{read,write}().
		mft.[ch] provide:	ntfs_mft_record_{read,write}(),
					ntfs_mft_records_{read,write}(), and
					ntfs_mft_record_get_data_size().
	- When writing mft records using the mft.c::ntfs_mft_record{s,}_write()
	  interface, the mft mirror is now updated automatically.
	- Add -Wall to compiler options when ./configure is run with
	  --enable-debug.
	- Fix minor error code path bugs in mkntfs.c that showed up with -Wall.
	- Fix all compiler warnings that showed up with -Wall.
	- Add new API function, provided by mft.[ch]: ntfs_file_record_read().
	- Add new API calls provided by unistr.[ch]:
		ntfs_ucstombs() and ntfs_mbstoucs().
	- Define API for mst.[ch] providing:
		ntfs_mst_post_read_fixup(),
		ntfs_mst_pre_write_fixup(), and
		ntfs_mst_post_write_fixup().
	- Define API for bootsect.[ch] providing:
		ntfs_boot_sector_is_ntfs().
	- Add beginning of new API with new files inode.[ch] providing:
		ntfs_inode_{open,close)(), and
		ntfs_extent_inode_open().
		- Note the inode related API is subject to change.
	- Start defining API provided by attrib.[ch]:
		ntfs_attr_search_ctx typedef,
		ntfs_attr_{get,put,reinit}_search_ctx(), and
		ntfs_attr_lookup().
	- Add a TODO.libntfs laying down my personal roadmap for the library.
	- Remove ntfs_attr_find() from API, everyone must use ntfs_attr_lookup()
	  instead.
	- Rename all attribute name constants from $blah to AT_blah.
	- Rename all system file constants from FILE_$blah to FILE_blah.
	- Port ntfs_attr_lookup() stuff from ntfs tng driver.
	- Implement loading of extent inodes. They are attached on open to the